--- a/css/ultilidades/cores.css
+++ b/css/ultilidades/cores.css
@@ -12,7 +12,7 @@
   --cor-10: #2e2e2e;
   --cor-11: #111111;
   --cor-12: #000000;
-  --cor-p5: #090d64;
+  --cor-p5: #2830c4;
   --cor-p4: #0d105b;
   --cor-p3: #090c59;
   --cor-p2: #040645;
