--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,6 @@
 /*Home*/
 @import "home/introducao.css";
 @import "home/bicicletas.css";
+@import "home/tecnologia.css";
+@import "home/parceiros.css";
+@import "home/depoimento.css";
