--- a/css/ultilidades/componente.css
+++ b/css/ultilidades/componente.css
@@ -11,9 +11,9 @@
   display: inline-block;
   padding: 16px 32px;
   border-radius: 5px;
-  background: var(--cor-p1);
+  background: var(--cor-p3);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  color: #b8bbff;
+  color: var(--cor-0);
   font: 600 1.125rem/1.35 "Poppins", sans-serif;
 }
 
@@ -25,5 +25,29 @@
   .botao a {
     padding: 12px 16px;
     font-size: 1rem;
+  }
+}
+
+.link {
+  display: inline-block;
+  color: var(--cor-p5);
+  font: 500 1.5rem/1.5 "Poppins", sans-serif;
+}
+
+.link::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: currentColor;
+}
+
+.link:hover {
+  color: var(--cor-0);
+}
+
+@media (max-width: 800px) {
+  .link {
+    font: 500 1rem/1 "Poppins", sans-serif;
   }
 }
