--- a/css/home/depoimento.css
+++ b/css/home/depoimento.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   background-color: var(--cor-p1);
+  box-shadow: inset 0 -40px var(--cor-0);
   overflow: hidden;
 }
 
@@ -46,9 +47,11 @@
   .depoimento {
     grid-template-columns: 1fr;
     text-align: center;
+    box-shadow: none;
   }
   .depoimento img {
     max-height: 200px;
+    border-radius: 0px;
   }
   .depoimento-conteudo {
     padding: 40px 20px;
