--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
+/*Global*/
 @import "global/header.css";
+@import "global/footer.css";
 @import "global/global.css";
 
 /*Ultilidades*/
@@ -12,3 +14,7 @@
 @import "home/tecnologia.css";
 @import "home/parceiros.css";
 @import "home/depoimento.css";
+@import "home/seguros.css";
+
+/* Termos e Condições*/
+@import "termos/termos.css";
