--- a/css/global/global.css
+++ b/css/global/global.css
@@ -4,7 +4,9 @@ body {
   color: #111111;
 }
 
-ul {
+ul,
+li {
+  padding: 0px;
   margin: 0px;
   list-style: none;
 }
@@ -16,6 +18,7 @@ a {
 
 img {
   max-width: 100%;
+  height: auto;
   display: block;
 }
 
@@ -27,10 +30,9 @@ h1,
 h2,
 h3,
 h4,
-ul,
-li,
 p,
 blockquote,
-a {
+a,
+dd {
   margin: 0px;
 }
