--- a/css/home/bicicletas.css
+++ b/css/home/bicicletas.css
@@ -8,12 +8,15 @@
 }
 
 .bicicletas ul {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
   gap: 40px;
   max-width: 1400px;
   padding: 0 20px 20px 20px;
   overflow-x: auto;
+}
+
+#bicicleta .bicicletas ul {
+  padding: 0px 0px 20px 0px;
 }
 
 .bicicletas li {
