--- a/css/home/depoimento.css
+++ b/css/home/depoimento.css
@@ -16,6 +16,7 @@
 .depoimento-conteudo {
   padding: 40px 40px 80px 80px;
   align-self: end;
+  background: url("../../img/dec/deco.svg") no-repeat bottom 50px right 40px;
 }
 
 .depoimento-conteudo p {
@@ -41,6 +42,12 @@
 
 .depoimento p::after {
   content: "”";
+}
+
+@media (min-width: 1200px) {
+  .depoimento img {
+    max-height: 520px;
+  }
 }
 
 @media (max-width: 800px) {
