--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -1,5 +1,6 @@
 .intro-bg {
-  background: var(--cor-12);
+  background: var(--cor-12) url("../../img/dec/deco.svg") no-repeat bottom 140px
+    left 20px;
   box-shadow: inset 0 -120px var(--cor-0);
 }
 
