--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 @import "ultilidades/componente.css";
 @import "ultilidades/tipografia.css";
 @import "ultilidades/cores.css";
+@import "ultilidades/formulario.css";
+@import "ultilidades/animacao.css";
 
 /*Home*/
 @import "home/introducao.css";
@@ -16,5 +18,23 @@
 @import "home/depoimento.css";
 @import "home/seguros.css";
 
-/* Termos e Condições*/
+/*Termos e Condições*/
 @import "termos/termos.css";
+
+/*Bicicletas*/
+@import "bicicletas/bicicletas2.css";
+
+/*Seguros*/
+@import "seguros/vantagens.css";
+@import "seguros/perguntas.css";
+
+/*Bicicleta*/
+@import "bicicleta/bicicleta.css";
+@import "bicicleta/seguro.css";
+
+/*Contato*/
+@import "contato/contato.css";
+@import "contato/lojas.css";
+
+/*Orçamento*/
+@import "orcamento/orcamento.css";
